# Helper-Agent

./: .gitignore  README.md  pyproject.toml
Testing/: main.ipynb
dev/: agent.py  agent_tools.py
jupyter/: helper-agent-V2.ipynb  helper-agent.ipynb
