[project]
name = "helper-agent"
version = "0.1.0"
description = "Helper Agent using langchain properties."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "lxml>=5.3.1",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
